kubernetes/discovery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: discovery
  name: discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: discovery
  strategy: { }
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: discovery
    spec:
      containers:
        - image: egytom/networkmonitor-discovery:0.1
          imagePullPolicy: Always
          name: discovery
          ports:
            - containerPort: 8761
          resources: { }
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: { }
