kubernetes/monitor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: monitor
  name: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: monitor
  strategy: { }
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: monitor
    spec:
      containers:
        - env:
            - name: JAVA_OPTS
              value: ' -DEUREKA_SERVER=http://discovery:8761/eureka -Dspring.profiles.active=prod -Deureka.instance.preferIpAddress=true'
          image: egytom/networkmonitor-monitor:0.1
          imagePullPolicy: Always
          name: monitor
          resources: { }
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: { }
