kubernetes/discovery-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: discovery
  name: discovery
spec:
  type: NodePort
  ports:
    - name: "8761"
      port: 8761
      targetPort: 8761
      nodePort: 30761
  selector:
    io.kompose.service: discovery
status:
  loadBalancer: { }
