kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nw-ingress
spec:
  rules:
    - host: kngw.aut.bme.hu
      http:
        paths:
          - path: /configurator
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /eureka
            pathType: Prefix
            backend:
              service:
                name: discovery
                port:
                  number: 8761
